--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <!-- Meta tags for iOS Home Screen App -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>TDEE Tracker</title>
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -85,6 +88,22 @@
                 </div>
             );
         };
+        
+        // --- Confirmation Modal Component ---
+        const ConfirmationModal = ({ onConfirm, onCancel }) => {
+            return (
+                <div className="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center z-50">
+                    <div className="bg-[#2c2c2e] rounded-xl p-6 border border-gray-700 shadow-lg text-center">
+                        <h3 className="text-lg font-bold text-white mb-4">Are you sure?</h3>
+                        <p className="text-gray-300 mb-6">This will permanently delete all your data. This action cannot be undone.</p>
+                        <div className="flex justify-center gap-4">
+                            <button onClick={onCancel} className="bg-gray-600 text-white font-bold py-2 px-6 rounded-md hover:bg-gray-500">Cancel</button>
+                            <button onClick={onConfirm} className="bg-red-600 text-white font-bold py-2 px-6 rounded-md hover:bg-red-700">Confirm</button>
+                        </div>
+                    </div>
+                </div>
+            );
+        };
 
         // --- Main App Component ---
         function App() {
@@ -95,6 +114,7 @@
             const [caloriesInput, setCaloriesInput] = useState('');
             const [view, setView] = useState('log');
             const [showInfo, setShowInfo] = useState(false);
+            const [showClearConfirm, setShowClearConfirm] = useState(false);
 
             useEffect(() => {
                 try {
@@ -190,11 +210,11 @@
                 const filename = `tdee-data-${new Date().toISOString().replace(/[:.]/g, '-')}`;
                 if (format === 'json') {
                     const blob = new Blob([JSON.stringify({ goal, entries }, null, 2)], { type: 'application/json' });
-                    saveAs(blob, `${filename}.json`);
+                    window.saveAs(blob, `${filename}.json`);
                 } else {
                     const csv = [ "date,weight,calories", ...entries.map(e => `${e.date},${e.weight},${e.calories}`) ].join('\n');
                     const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
-                    saveAs(blob, `${filename}.csv`);
+                    window.saveAs(blob, `${filename}.csv`);
                 }
             };
 
@@ -226,9 +246,15 @@
                 reader.readAsText(file);
                 e.target.value = null;
             };
+            
+            const handleConfirmClear = () => {
+                setEntries([]);
+                setShowClearConfirm(false);
+            };
 
             return (
                 <div className="bg-[#1c1c1e] min-h-screen font-sans text-gray-200">
+                    {showClearConfirm && <ConfirmationModal onConfirm={handleConfirmClear} onCancel={() => setShowClearConfirm(false)} />}
                     <div className="container mx-auto p-4 sm:p-6 lg:p-8 max-w-5xl">
                         <header className="text-center mb-6">
                             <h1 className="text-4xl font-bold text-white">Adaptive TDEE Tracker</h1>
@@ -316,7 +342,7 @@
                                             <button onClick={() => handleExport('json')} className="bg-gray-600 text-white font-bold py-2 px-4 rounded-md hover:bg-gray-500">Export JSON</button>
                                             <button onClick={() => handleExport('csv')} className="bg-gray-600 text-white font-bold py-2 px-4 rounded-md hover:bg-gray-500">Export CSV</button>
                                             <label className="bg-green-600 text-white font-bold py-2 px-4 rounded-md hover:bg-green-700 text-center cursor-pointer">Import<input type="file" accept=".json, .csv" onChange={handleImport} className="hidden" /></label>
-                                            <button onClick={() => setEntries([])} className="bg-red-600 text-white font-bold py-2 px-4 rounded-md hover:bg-red-700">Clear Data</button>
+                                            <button onClick={() => setShowClearConfirm(true)} className="bg-red-600 text-white font-bold py-2 px-4 rounded-md hover:bg-red-700">Clear Data</button>
                                         </div>
                                     </div>
                                 </div>
