--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             const day = `${dt.getDate()}`.padStart(2, '0');
             return `${y}-${m}-${day}`;
         };
+        const prettyDate = (iso) => {
+            const d = new Date(iso);
+            const day = String(d.getDate()).padStart(2, '0');
+            const month = String(d.getMonth() + 1).padStart(2, '0');
+            const year = String(d.getFullYear()).slice(-2);
+            return `${day}/${month}/${year}`;
+        };
 
         // Storage helpers
         const STORAGE_KEY = "tdee-tracker-entries";
@@ -380,3 +387,4 @@
     </script>
 </body>
 </html>
+
