--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     const diff = Math.round((new Date(recent[i].date) - new Date(recent[i-1].date)) / MS_PER_DAY);
                     if (diff > 3) { hasGap = true; break; } // Allow for a couple missed days
                 }
-                if (hasGap) return 'Gaps in logs â€” estimate may vary';
+                if (hasGap) return 'Gaps in logs — estimate may vary';
                 return spanDays >= 10 ? 'Reliable Estimate' : 'Preliminary Estimate';
             }, [entries]);
 
@@ -420,7 +420,7 @@
                         <header className="text-center mb-6">
                             <h1 className="text-4xl font-bold text-white">Ryan's TDEE Tracker</h1>
                             <p className="text-gray-400 mt-2">Target weight date: <span className="font-semibold text-white">{targetDate ? formatDateDDMMYY(targetDate) : "N/A"}</span></p>
-                            <p className="text-gray-400 mt-1">Target weight date at current Î”: <span className="font-semibold text-white">{projectedTargetDate}</span></p>
+                            <p className="text-gray-400 mt-1">Target weight date at current Δ: <span className="font-semibold text-white">{projectedTargetDate}</span></p>
                         </header>
                         <main>
                             <div className="bg-[#2c2c2e] rounded-xl shadow-lg p-6 mb-6 border border-gray-700">
